# labelator

./: .gitignore  LICENSE  README.md  build-instructions.txt  setup.cfg
labelator/: __init__.py  labelator.py
