[metadata]
name = labelator
description = package for writing circular sticky labels to print and put on test tubes 
author = David Doty
license = MIT
author_email = doty@ucdavis.edu
platforms=any

long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
install_requires =
    drawSvg
    cairosvg
    typing-extensions
python_requires = >=3.7

[options.extras_require]
docs =
    matplotlib
    sphinx-book-theme
    sphinx-autoapi
    myst-parser

